Basic solution for 7

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 3/temp.bin
 
 6/qr-bruteforce/
+7/brute-force/bin
+7/brute-force/obj
+7/decompiled/cc1b4db7-d5b6-48b8-bee5-8dcba508bf81/bin
+7/decompiled/cc1b4db7-d5b6-48b8-bee5-8dcba508bf81/obj
+7/decompiled/cc1b4db7-d5b6-48b8-bee5-8dcba508bf81/.vs
+7/brute-force/.vs
